# susu-ai

./: .env.example  .gitignore  README.md  docker-compose.yml  招聘笔试题.html  规划.md
backend/: .dockerignore  Dockerfile  mcp_server.py  pyproject.toml
backend/app/: main.py
backend/app/api/: chat.py  documents.py  logs.py  settings.py  webhooks.py
backend/app/core/: config.py  logging.py  observability.py
backend/app/db/: database.py
backend/app/models/: chat.py  document.py  log.py
backend/app/services/: agent.py  rag.py  session.py
backend/app/services/im/: base.py  dingtalk.py
backend/app/services/llm/: base.py  claude.py  embedding.py  openai_client.py
backend/app/tools/: internal_api.py  registry.py  utils.py
backend/evals/: cases.json  run_evals.py
backend/tests/: conftest.py  test_agent.py  test_api.py  test_im.py  test_llm_claude.py  test_rag.py  test_settings.py  test_tools.py
docs/: FAQ.md  员工手册.md  新人入职指南.md
docs/submission/: AI_USAGE.md  自评.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: layout.tsx  page.tsx
frontend/src/app/admin/documents/: page.tsx
frontend/src/app/admin/settings/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/components/: chat-panel.tsx
frontend/src/lib/: api.ts  types.ts
mock-api/: Dockerfile  main.py  pyproject.toml
scripts/: deploy.sh  seed.sh  start.sh  test.sh
